--- a/MD课件/面试技巧.md
+++ b/MD课件/面试技巧.md
@@ -306,4 +306,8 @@ Spring框架：
   - Github:英文,大量的开源代码
   - CSDN：中文
   - StackOverFlow：英文,查看错误
+- 最近看什么书？
+  - 常去哪些开源社区，技术博客
+  - 有没有看过哪些开源项目
+  - 最喜欢的技术博客是哪个
 
