数据库设计习题

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -317,3 +317,18 @@ HTML/XML:    <!-- -->
 ini等配置:    #单行注释
 
 SQL:    -- 单行注释   /* 多行注释 */
+
+> ### Linux命令行
+
+1. 去www.github.com 里面注册一个账号(全球最大的开源代码平台)
+2. 安装CygWin(Windows下的Linux命令行)
+   - 安装Git
+   - 安装Vim
+   - 推荐查看详细配置指导:http://oldratlee.com/post/2012-12-22/stunning-cygwin
+   - 推荐常用的20个Linux命令:http://blog.csdn.net/ljianhui/article/details/11100625/
+   - 鸟哥的Linux私房菜:http://linux.vbird.org/linux_basic/0320bash.php
+3. 生成秘钥,给Github秘钥(让他有访问我们机器的权限)
+   - ssh-keygen -t rsa : 生成秘钥路径在 $HOME/.ssh/路径下
+   - 复制id_rsa.pub里面的内容
+4. ​
+
