数据库设计习题

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -1,22 +1,43 @@
+> ### 开发基本流程
+
+1. 需求分析(抽取出需要的JavaBean实体对象)
+
+   - 有哪些实体对象
+   - 这些对象对象有哪些属性(属性的名称还有属性的类型)
+
+2.  (编写Model层) 编写JavaBean对象(Java)    : Employee
+
+3. (编写DAO层)     编写SQL语句                       :  EmployeeDao
+
+4. (编写Service层)     编写我们的业务                 :   EmployeeService
+
+5. (编写web层)   + JSP前台
+
+6. 实体类写完了需要判断他们之间的关联(一对一，一对多，多对多)
+
+7. 编写建表语句DDL  对应我们的Model
+
+   ​
+
 > ### 什么是Tomcat?
 
-主流的WEB服务器有哪些?
+**主流的WEB服务器有哪些?**
 
-如何配置Tomcat的环境变量?
+**如何配置Tomcat的环境变量?**
 
-什么是Servlet/JSP容器?
+**什么是Servlet/JSP容器?**
 
-Tomcat目录下的几大文件夹比如 webapps , conf 等都是哪些文件有什么作用?
+**Tomcat目录下的几大文件夹比如 webapps , conf 等都是哪些文件有什么作用?**
 
-web.xml , server.xml , context.xml这几大配置文件的作用?
+**web.xml , server.xml , context.xml这几大配置文件的作用?**
 
-****
+
 
 > ### 什么是WEB应用(application)?
 
-如何创建WEB应用?
+**如何创建WEB应用?**
 
-什么是动态WEB资源，什么是静态WEB资源?   (Html,Servlet,JSP)
+**什么是动态WEB资源，什么是静态WEB资源?   (Html,Servlet,JSP)？**
 
 
 
@@ -63,61 +84,66 @@ web.xml有什么作用?
 
 > #### 什么是JSP?
 
-JSP的四大作用域分别是什么?举一个简单的实例 说明每个作用域的用途?
+**JSP的四大作用域分别是什么?举一个简单的实例 说明每个作用域的用途?**
 
-JSP的九大内置对象是什么?
+******JSP的九大内置对象是什么?**
 
-JSP的工作原理是什么?
+**JSP的工作原理是什么?**
 
 
 
 > #### Session和Cookie
 
-HTTP协议是无状态协议?  
+**HTTP协议是无状态协议?**  
 
 - 无状态协议:每次请求都是独立，就算我是同一个用户请求。计算机也不知道这次请求和上一次请求的区别。
 
-Session和Cookie的原理和用法是什么?
+**Session和Cookie的原理和用法是什么?**
 
 
 
 > ### JSTL标签库和EL表达式
 
-1.什么是JSTL
+**1.什么是JSTL**
 
-- JSTL(JavaStarndardTagLibrary)是对EL的扩展 ,有四大标签库
+- ****JSTL(JavaStarndardTagLibrary)是对EL的扩展 ,有四大标签库
 
-2.什么是EL表达式?  ${user.username} 的原理是什么?
+**2.什么是EL表达式?  ${user.username} 的原理是什么?**
 
-3.为什么我们要用他们?他们有什么优点
+******3.为什么我们要用JSTL标签库和EL表达式?他们有什么优点**
 
 
 
 > #### 什么是MVC?
 
-想象下HTML,Servlet,JSP等技术出现的先后顺序?
+**想象下HTML,Servlet,JSP等技术出现的先后顺序?**
 
+**WEB开发分四个层?**
 
+- Model/PoJo/JavaBean层：实体层
+- DAO(DataAccessObject):数据连接层
+- Service:业务层
+- web:控制层
 
 >### 什么是协议(Protocol)？什么是HTTP协议?
 
-请求头RequestHeader和响应头ResponseHeader?
+**请求头RequestHeader和响应头ResponseHeader?**
 
-利用GoogleChrome浏览器的开发者工具查看HTTP协议文本? 
+**利用GoogleChrome浏览器的开发者工具查看HTTP协议文本?** 
 
 
 
 > ### Request和Response
 
-GET方式和Post方式有什么区别?
+**GET方式和Post方式有什么区别?**
 
-哪些方式属于GET，哪些方式属于POST?
+**哪些方式属于GET，哪些方式属于POST?**
 
-页面跳转方式：请求转发requestDispatcher和重定向SendRedirect有啥区别?
+**页面跳转方式：请求转发requestDispatcher和重定向SendRedirect有啥区别?**
 
-request的功能包含几种?
+**request的功能包含几种?**
 
-response的功能包含几种?
+**response的功能包含几种?**
 
 
 
@@ -207,26 +233,29 @@ String newname = new String(bs,"UTF-8");
 
 > ### Mysql数据库
 
-什么是Mysql？什么是数据库?什么是关系型数据库?
+**什么是Mysql？什么是数据库?什么是关系型数据库?**
 
-主流关系型数据库（所有重要数据比如用户信息，账户信息）
+**主流关系型数据库（所有重要数据比如用户信息，账户信息）**
 
 - 开源 Mysql
 - 商业Oracle
 - 微软SqlServer
 
-非关系型NOSQL（日记或者统计数据，大量但不是那么重要）
+**非关系型NOSQL（日记或者统计数据，大量但不是那么重要）**
 
 - Mongodb
 - Redis
 
-什么是表结构Schema?什么是表记录?
+**什么是表结构Schema?什么是表记录?**
 
-高精度decimal(65,2) 表示63位整型，2位小数最高65位（跟金钱相关的字段基本得用它）
+- 高精度decimal(65,2) 表示63位整型，2位小数最高65位（跟金钱相关的字段基本得用它）
+
 
 - 计算机怎么表示浮点型Float? 利用M个2的负N次方拼接起来
 
-计算机是怎么表示时间的?
+**计算机是怎么表示时间的?**
+
+
 
 > ### SQL语法要求
 
@@ -278,15 +307,21 @@ String newname = new String(bs,"UTF-8");
 
 ​	8、SELECT集合输出。 
 
+
+
 > ### JDBC连接(JavaDataBaseConnector)Java数据库连接API
 
-如何编写一个JDBC连接?
+**如何编写一个JDBC连接?**
 
 - 注意事项1：规范化代码(JDBC连接也是IO流，记得关闭IO流)
 - while(rs.next())  迭代器 Iterator
+- 什么是规范化的JDBC连接
+- 如何编写一个通用的查询，对任何对象和数据表都可用()
+  - 泛型
+  - 反射
 
 
-什么是SQL注入?
+**什么是SQL注入?**
 
 - 按名称查询 利用SQL拼接会产生逻辑的错位，导致系统漏洞和系统的不安全
 
@@ -294,16 +329,22 @@ String newname = new String(bs,"UTF-8");
   SELECT  a.id, a.username, a.password  FROM sys_user a WHERE username=' 1' or '1=1 '
   ```
 
-PreparedStatement和Statement有什么区别?
+**PreparedStatement和Statement有什么区别?**
 
 - 防止SQL的注入
 - 预编译SQL,可以利用缓存效率会高一些
 
-SQL编写的一些规范?
+**SQL编写的一些规范?**
 
 - 不要使用*通配符,而是用一个结果集返回你需要的列的集合
+
 - 尽量使用PreparedStatement来处理数据
+
 - 每一个对象都要有id(主键), create_time(创建时间), update_time(更新时间)这三个字段，为了数据的运维
+
+- Java的数值类型 尽量使用封装类型Integer而不是基础类型
+
+  ​
 
 
 > ### 注释
@@ -318,17 +359,35 @@ ini等配置:    #单行注释
 
 SQL:    -- 单行注释   /* 多行注释 */
 
+
+
 > ### Linux命令行
 
 1. 去www.github.com 里面注册一个账号(全球最大的开源代码平台)
-2. 安装CygWin(Windows下的Linux命令行)
-   - 安装Git
+
+2. 安装CygWin(Windows下的Linux命令行) 
+
+   - 记得添加cygwin的163镜像: http://mirrors.163.com/cygwin/
+
+
+   - 安装Git  [15分钟掌握Git](http://blog.jobbole.com/53573/)
    - 安装Vim
    - 推荐查看详细配置指导:http://oldratlee.com/post/2012-12-22/stunning-cygwin
    - 推荐常用的20个Linux命令:http://blog.csdn.net/ljianhui/article/details/11100625/
    - 鸟哥的Linux私房菜:http://linux.vbird.org/linux_basic/0320bash.php
+
 3. 生成秘钥,给Github秘钥(让他有访问我们机器的权限)
+
    - ssh-keygen -t rsa : 生成秘钥路径在 $HOME/.ssh/路径下
    - 复制id_rsa.pub里面的内容
-4. ​
 
+4. 进入你的workpace路径执行: **git clone -b myshop  git@github.com:arafat5549/SSFDemo.git myshop**
+
+   ​
+
+> ### Git常用命令
+
+- git log:查看每次提交commit的情况
+- git reset --hard [指定Hash码] : 回退到指定的版本
+- git clone -b 指定分支 git@github.com:用户名/XX.git [指定文件的名称] : 第一次下载到本地
+- git pull : 更新远程仓库
