无线级别分类

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -5,7 +5,13 @@
    - 有哪些实体对象
    - 这些对象对象有哪些属性(属性的名称还有属性的类型)
 
-2.  (编写Model层) 编写JavaBean对象(Java)    : Employee
+2. (编写Model层) 编写JavaBean对象(Java)    : Employee
+
+   - ```
+     //使用封装类型
+     ```
+
+   - ​
 
 3. (编写DAO层)     编写SQL语句                       :  EmployeeDao
 
@@ -255,7 +261,10 @@ String newname = new String(bs,"UTF-8");
 
 **计算机是怎么表示时间的?**
 
+**什么是主键?什么是外键?**
 
+- 主键唯一而且不为空,尽量使用数值类型而不用字符串类型，自增长。
+- 外键关联的主键（可以关联自己这张表，也可以关联别的表）
 
 > ### SQL语法要求
 
@@ -370,8 +379,8 @@ SQL:    -- 单行注释   /* 多行注释 */
    - 记得添加cygwin的163镜像: http://mirrors.163.com/cygwin/
 
 
-   - 安装Git  [15分钟掌握Git](http://blog.jobbole.com/53573/)
-   - 安装Vim
+- 安装Git  [15分钟掌握Git](http://blog.jobbole.com/53573/)
+- 安装Vim
    - 推荐查看详细配置指导:http://oldratlee.com/post/2012-12-22/stunning-cygwin
    - 推荐常用的20个Linux命令:http://blog.csdn.net/ljianhui/article/details/11100625/
    - 鸟哥的Linux私房菜:http://linux.vbird.org/linux_basic/0320bash.php
