静态文件夹

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -11,15 +11,37 @@
 
 2. (编写Model层) 编写JavaBean对象(Java)    : Employee
 
-   - ```
-     //使用封装类型
+   - ```java
+     //使用封装类型 (拆装箱)
+     private Integer id ;// private int id;
+     ```
+
+   - 封装 (私有化属性,公有化方法)
+
+   - 一定要有主键(使用int类型，自增长)
+
+   - 要有create_time和update_time这是为了运维
+
+   - 命名规范驼峰方式
+
+3. (编写DAO层)     编写SQL语句                       :  EmployeeDao
+
+   - 不要使用通配符*,用指定列来
+
+   - ```java
+     	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+     	private static final String COLUMN = 
+     			  " a.id,"
+     			+ " a.name,"
+     			+ " a.parent_id AS 'parentId', "
+     			+ " a.parent_ids AS 'parentIds'";
      ```
 
    - ​
 
-3. (编写DAO层)     编写SQL语句                       :  EmployeeDao
-
 4. (编写Service层)     编写我们的业务                 :   EmployeeService
+
+   - ​
 
 5. (编写web层)   + JSP前台
 
@@ -273,7 +295,19 @@ String newname = new String(bs,"UTF-8");
 - 主键唯一而且不为空,尽量使用数值类型而不用字符串类型，自增长。
 - 外键关联的主键（可以关联自己这张表，也可以关联别的表）
 
+**怎么做无限级分类？**
 
+- 递归
+
+- 模糊查询(右模糊查询 %放在右边 ， 不要使用左模糊和全模糊)
+
+- ```sql
+  SELECT " + COLUMN +" FROM sys_department a WHERE a.parent_ids LIKE '0,1%'
+  ```
+
+- ​
+
+  ​
 
 > ### SQL语法要求
 
