商品和分类模块

--- a/我的文档/商城系统构建.md
+++ b/我的文档/商城系统构建.md
@@ -1,6 +1,6 @@
 # 系统构建
 
-1. 用户模块
+1. 用户模块User
    - 用户登录(login)
      - 特殊要求:登录完成后，下次进入登录页面不需要输入用户名和密码.
    - 用户注册(register)
@@ -9,5 +9,14 @@
    - 用户登出(logout)
    - 查看用户信息(userInfo)
      - 用户查看自己的用户信息
-2. 商品模块
-3. ​
+2. 商品模块Product
+   - 商品只能属于某一个分类
+   - 商品可以加入购物车
+   - 商品的属性有:
+     - ​
+3. 分类模块Category
+   - 分类能拥有子分类
+4. 购物车模块Cart
+   - 加入购物车(商品)
+5. 订单模块Order
+   - ​
