添加方法描述

--- a/我的文档/商城系统构建.md
+++ b/我的文档/商城系统构建.md
@@ -11,9 +11,17 @@
      - 用户查看自己的用户信息
 2. 商品模块Product
    - 商品只能属于某一个分类
+
    - 商品可以加入购物车
+
    - 商品的属性有:
-     - ​
+
+   - 商品Service
+
+     - 根据分类Id获取所有商品
+     - 获取竞价排名前五的商品
+
+     ​
 3. 分类模块Category
    - 分类能拥有子分类
 4. 购物车模块Cart
