--- a/我的文档/开发工具的介绍，使用，安装.md
+++ b/我的文档/开发工具的介绍，使用，安装.md
@@ -156,7 +156,19 @@
 -   **文本IDE SubLimeText的安装**
 
     - 安装PackageControll
+
+      - 使用Ctrl+`快捷键或者通过View->Show Console菜单打开命令行，粘贴如下代码：
+
+
+      - ```python
+        import urllib.request,os; pf = 'Package Control.sublime-package'; ipp = sublime.installed_packages_path(); urllib.request.install_opener( urllib.request.build_opener( urllib.request.ProxyHandler()) ); open(os.path.join(ipp, pf), 'wb').write(urllib.request.urlopen( 'http://sublime.wbond.net/' + pf.replace(' ','%20')).read())
+        ```
+
     - 安装Emmet , SublimeCodeIntel
+
+      - **快捷键 Ctrl+Shift+P**（菜单 – Tools – Command Paletter），输入 install 选中Install Package并回车，输入或选择你需要的插件回车就安装了（注意左下角的小文字变化，会提示安装成功）。
+      - ![http://2.devework.com/2013/08/430773095220130807.png](http://2.devework.com/2013/08/430773095220130807.png)
+      - ![http://2.devework.com/2013/08/400496516120130807.png](http://2.devework.com/2013/08/400496516120130807.png)
 
 -   **专业浏览器Chrome的安装**
 
@@ -197,10 +209,10 @@
 
     - UML绘图工具,绘制 类图 流程图等等
 
-- 使用Git下载和管理我们的工程(涉及到的知识点：Linux,Git,公钥加密机制)
-  - 去github.com 注册一个账号
-  - 查看cygwin安装事项(安装cygwin)
-  - 先生成SSH公钥：  ssh-keygen -t rsa
-  - 复制$HOME/.ssh/id_rsa.pub里面的内容 到GITHUB设置选项里面的SSH/GPG key
-  - 到你的workspace工程目录下 git clone -b myshop git@github.com:arafat5549/SSFDemo.git myshop
-  - 以后我有更新的话只要git pull获取最新的版本
+-   使用Git下载和管理我们的工程(涉及到的知识点：Linux,Git,公钥加密机制)
+    - 去github.com 注册一个账号
+    - 查看cygwin安装事项(安装cygwin)
+    - 先生成SSH公钥：  ssh-keygen -t rsa
+    - 复制$HOME/.ssh/id_rsa.pub里面的内容 到GITHUB设置选项里面的SSH/GPG key
+    - 到你的workspace工程目录下 git clone -b myshop git@github.com:arafat5549/SSFDemo.git myshop
+    - 以后我有更新的话只要git pull获取最新的版本
