添加方法描述

--- a/我的文档/开发工具的介绍，使用，安装.md
+++ b/我的文档/开发工具的介绍，使用，安装.md
@@ -159,18 +159,20 @@
 
       - 使用Ctrl+`快捷键或者通过View->Show Console菜单打开命令行，粘贴如下代码：
 
-
-      - ```python
-        import urllib.request,os; pf = 'Package Control.sublime-package'; ipp = sublime.installed_packages_path(); urllib.request.install_opener( urllib.request.build_opener( urllib.request.ProxyHandler()) ); open(os.path.join(ipp, pf), 'wb').write(urllib.request.urlopen( 'http://sublime.wbond.net/' + pf.replace(' ','%20')).read())
+      - ```
+            import urllib.request,os; pf = 'Package Control.sublime-package'; ipp = sublime.installed_packages_path(); urllib.request.install_opener( urllib.request.build_opener( urllib.request.ProxyHandler()) ); open(os.path.join(ipp, pf), 'wb').write(urllib.request.urlopen( 'http://sublime.wbond.net/' + pf.replace(' ','%20')).read())
         ```
 
-    - 安装Emmet , SublimeCodeIntel
 
-      - **快捷键 Ctrl+Shift+P**（菜单 – Tools – Command Paletter），输入 install 选中Install Package并回车，输入或选择你需要的插件回车就安装了（注意左下角的小文字变化，会提示安装成功）。
-      - ![http://2.devework.com/2013/08/430773095220130807.png](http://2.devework.com/2013/08/430773095220130807.png)
-      - ![http://2.devework.com/2013/08/400496516120130807.png](http://2.devework.com/2013/08/400496516120130807.png)
+- ​
+  - 安装Emmet , SublimeCodeIntel
+    - **快捷键 Ctrl+Shift+P**（菜单 – Tools – Command Paletter），输入 install 选中Install Package并回车，输入或选择你需要的插件回车就安装了（注意左下角的小文字变化，会提示安装成功）。
+    - ![http://2.devework.com/2013/08/430773095220130807.png](http://2.devework.com/2013/08/430773095220130807.png)
+    - ![http://2.devework.com/2013/08/400496516120130807.png](http://2.devework.com/2013/08/400496516120130807.png)
 
--   **专业浏览器Chrome的安装**
+
+
+-   *专业浏览器Chrome的安装**
 
     - 自带开发者工具
 
