购物车模块

--- a/我的文档/商城系统构建.md
+++ b/我的文档/商城系统构建.md
@@ -9,6 +9,7 @@
    - 用户登出(logout)
    - 查看用户信息(userInfo)
      - 用户查看自己的用户信息
+
 2. 商品模块Product
    - 商品只能属于某一个分类
 
@@ -22,9 +23,29 @@
      - 获取竞价排名前五的商品
 
      ​
+
 3. 分类模块Category
    - 分类能拥有子分类
+
 4. 购物车模块Cart
+
+   - 考虑问题
+
+     - 一个用户只能拥有一个购物车实体！
+
+
+     - 需要不需要绑定用户登录?
+     - 如何存储你的购物车(需要不需要入库)
+
+
    - 加入购物车(商品)
+   - 基本流程
+     - 1.用户登录，从数据库里面获取购物车对象findCartByUserId
+       - 没有购物车
+       - 有购物车
+     - 2.加入购物车，从缓存session获取购物车对象
+       - 没有购物车项
+       - 有购物车项
+
 5. 订单模块Order
    - ​
