--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -2,6 +2,26 @@
 
 **[JAVA基础知识点](http://www.jianshu.com/p/1990eb1f66eb)**
 
+
+
+> ### Java高级特性
+
+泛型Generic？
+
+- 他的作用是什么？  List不指定你传入的类型
+  - 不使用它 每次调用都需要强转
+  - 强转的时候有可能报错 (把错误预警提前) 在编译期就发现错误
+
+反射Reflect?
+
+- 他的作用是什么?
+  - 通过class模板构建java对象 .class->.java
+  - 根据用户传入的class模板 反编译用户需要的java对象
+- 反射是怎么实现的，把对象的所有属性，方法等都反射为一个对象。
+- 什么地方用到反射
+  - ${user.username}EL表达式
+  - Class.forName("");   JDBC连接里面
+
 > ### 开发基本流程
 
 1. 需求分析(抽取出需要的JavaBean实体对象)
@@ -26,18 +46,20 @@
 
 3. (编写DAO层)     编写SQL语句                       :  EmployeeDao
 
-   - 不要使用通配符*,用指定列来
+   -    不要使用通配符*,用指定列来
 
-   - ```java
-     	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-     	private static final String COLUMN = 
-     			  " a.id,"
-     			+ " a.name,"
-     			+ " a.parent_id AS 'parentId', "
-     			+ " a.parent_ids AS 'parentIds'";
+   -    ```java
+        	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+        	private static final String COLUMN = 
+        			  " a.id,"
+        + " a.name,"
+        			+ " a.parent_id AS 'parentId', "
+        			+ " a.parent_ids AS 'parentIds'";
+        ```
      ```
 
    - ​
+     ```
 
 4. (编写Service层)     编写我们的业务                 :   EmployeeService
 
@@ -396,15 +418,39 @@ String newname = new String(bs,"UTF-8");
 
 **SQL编写的一些规范?**
 
-- 不要使用*通配符,而是用一个结果集返回你需要的列的集合
+- 不要使用*通配符,而是用一个结果集返回你需要的列的集合(指定返回列)
+- 尽量使用PreparedStatement来处理数据,它有什么优势
+- 每一个对象都要有id(主键), create_time(创建时间), update_time(更新时间)这三个字段，后两个是为了数据的运维
+  - 说明：其中 id 必为主键，类型为 unsigned bigint、单表时自增、步长为 1；分表时改为从
+    TDDL Sequence 取值，确保分表之间的全局唯一。create_time, update_time的类型均为
+    date_time 类型
+- Java的数值类型 尽量使用封装类型Integer而不是基础类型,为什么?
+- 避免使用全模糊查询 LIKE '%aaaaa%'和左模糊查询 '%aaaaaa' ,使用右模糊查询'aaaaaa%' 这也是为什么无限级别分类使用parentId的原因。
 
-- 尽量使用PreparedStatement来处理数据
 
-- 每一个对象都要有id(主键), create_time(创建时间), update_time(更新时间)这三个字段，为了数据的运维
 
-- Java的数值类型 尽量使用封装类型Integer而不是基础类型
+
+- 返回什么实体类型就在那个实体的DAO来处理它
+
+- 小数类型为 decimal，禁止使用 float 和 double。
+
+- 表名最好加上业务模块前缀 比如sys_ 
 
   ​
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 > ### 注释
