数据库事务和数据库连接池

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -49,9 +49,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-        	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-        	private static final String COLUMN = 
-        			  " a.id,"
+           	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+           	private static final String COLUMN = 
+           			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -431,27 +431,64 @@ String newname = new String(bs,"UTF-8");
 
 
 - 返回什么实体类型就在那个实体的DAO来处理它
-
 - 小数类型为 decimal，禁止使用 float 和 double。
-
 - 表名最好加上业务模块前缀 比如sys_ 
 
-  ​
 
 
 
 
+> ### 批处理Batch
+
+一批一批的执行SQL语句。
+
+> ### 事务
+
+什么是数据库事务?
+
+- ACID特性（为了保证数据的一致性和完整性,讲转账的例子）
+
+- 你怎么使用事务(开启事务:setAutoCommit(false)  提交事务commit 回退rollback )
+
+  ```java
+  try{
+      conn.setAutoCommit(false) ;
+      //....
+      //...
+    
+      conn.commit();
+  }catch(SQLException e){
+     conn.rollback();
+  }
+  ```
+
+- 脏读DirtyRead，不可重复读 UnrepeatableRead，幻读PhantomRead
+
+- 四个隔离级别
+
+- 我们一般在Service层处理事务(因为这里是处理多个Dao的业务层)
+
+- -- Spring框架怎么使用事务
 
 
 
+> ### 数据库连接池
 
+- 常用的数据库连接池: DBCP(Apache) , C3P0 , Druid(阿里巴巴,自带数据库监控功能)
 
+- **池参数（所有池参数都有默认值）**：
 
+  初始大小：10个                                   数据库池创建的时候里面连接的数量
 
+  最小空闲连接数：3个                          最小要维护的连接数量
 
+  增量：一次创建的最小单位（5个）   连接不够 需要一次性创建的连接
 
+  最大空闲连接数：12个                       最大要维护的连接数量
 
+  最大连接数：20个                               连接池最多能有多少个连接
 
+  最大的等待时间：1000毫秒               请求维持多久
 
 > ### 注释
 
