--- a/我的文档/开发工具的介绍，使用，安装.md
+++ b/我的文档/开发工具的介绍，使用，安装.md
@@ -99,6 +99,12 @@
       ```
       ​
 
+  - Maven的常用命令:
+
+    - mvn install  (到Pom文件所在的路径下) 包含了mvn build和mvn test的功能
+    - mvn build
+    - mvn test
+
 
 
 - **Git的安装**
