--- a/我的文档/开发工具的介绍，使用，安装.md
+++ b/我的文档/开发工具的介绍，使用，安装.md
@@ -64,7 +64,7 @@
 
   - 配置bin目录：PATH路径为 %M2_HOME%/bin;
 
-  - 需要配置国内阿里云的镜像 让你下载包更快
+  - 修改配置文件conf/setting.xml        (需要配置国内阿里云的镜像 让你下载包更快)
 
   - ```xml
     在<mirrors>标签对里面配置一个镜像 ，可以配置多个镜像 会按顺序执行  
@@ -73,10 +73,17 @@
           <name>aliyun maven</name>
           <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
           <mirrorOf>central</mirrorOf>        
-        </mirror>
+    </mirror>
     ```
 
   - 2.构建MAVEN工程（我给你的Eclipse版本已经安装好了Maven插件）
+
+  - 修改Eclipse的Maven配置信息,   Windows->Perfences->Maven 
+
+    - **Installtions** :  添加你的maven配置
+    - **UserSetting**:  修改配置文件所在路径指定到(conf/setting.xml  )
+
+  - 常见一个新的Maven工程   # (MavenProject)
 
   - 四个路径
 
@@ -99,9 +106,9 @@
       ```
       ​
 
-  - Maven的常用命令:
+  - Maven的常用命令:     (需要先进入到Pom文件所在的路径下) 
 
-    - mvn install  (到Pom文件所在的路径下) 包含了mvn build和mvn test的功能
+    - mvn install 包含了mvn build和mvn test的功能
     - mvn build
     - mvn test
 
