--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -49,9 +49,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-           	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-           	private static final String COLUMN = 
-           			  " a.id,"
+                    	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                    	private static final String COLUMN = 
+                    			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -534,3 +534,220 @@ SQL:    -- 单行注释   /* 多行注释 */
 - git reset --hard [指定Hash码] : 回退到指定的版本
 - git clone -b 指定分支 git@github.com:用户名/XX.git [指定文件的名称] : 第一次下载到本地
 - git pull : 更新远程仓库
+
+
+
+> ### WEB框架
+
+SSH:Spring-Struts2-Hibernate
+
+MVC:
+
+Spring框架:相当于Controller层#大管家
+
+Struts2框架：WEBMVC-View层，
+
+- 获取请求-参数
+- 验证参数
+- 处理请求
+- 响应请求
+
+Hibernate框架：Model层，ORM(ObjectRelativeMapping对象关系映射)框架 ，将数据库类型转化为对象
+
+- 不用编写sql，很难深度定制
+- 优化起来很困难
+
+SSM:Spring-SpringMVC-MyBatis
+
+SpringMVC框架：WEBMVC框架
+
+Mybatis框架:ORM框架
+
+- 你还是需要编写sql
+
+
+
+EJB(EnterpriseJavaBean):老式的javaEE的规范
+
+Spring框架-无侵入轻量型框架-解耦
+
+- 无侵入：我需要增加和删除一些第三方的功能和服务，我不需要修改我的源代码
+
+
+
+> ### Spring框架（代理）
+
+IOC/DI:
+
+- IOC控制反转： IOC容器或Bean工厂，你所有写的类除了Model，基本都不用new出来(你不需要维护他的生命周期)，但是需要在你的IOC容器里面注册它。
+- DI依赖注入：
+
+AOP:
+
+事务管理:
+
+
+
+
+
+XML配置的方式：
+
+```xml
+	<!-- IOC控制反转，在容器里面注册-->
+	<bean id="userDao" class="com.ssf.dao.impl.UserDaoImpl"></bean>
+	 
+	<!-- DI依赖注入，管理他们的依赖关系-->
+	<bean id="userService" class="com.ssf.service.UserService">
+	    <property name="myDao" ref="userDao"/>
+	</bean>
+	 
+```
+
+注解扫描的方式：
+
+- 四大IOC的注解:
+- 这四个注解逻辑上是完全一样的，把对应的类注册到IOC容器里面去
+- @Component
+  @Repository
+  @Service
+  @Controller
+
+
+
+- 两大DI的注解：
+
+- 两大依赖注入注解
+
+- @AutoWired 按类别注入 Spring的注解
+
+- @Resouce     按名称注入  JDK的注解 （默认Bean的id是什么 类名的首字母小写）
+
+- 依赖的注入的几种方式:
+
+  - setter注入: 需要你有set和get方法
+
+    ```xml
+    <bean id="userService" class="com.ssf.service.UserService">
+    	    <property name="myDao" ref="userDao"/><!-- Property标签做setter注入用 -->
+    </bean>
+    ```
+
+  - 构造器注入: 需要你有构造器
+
+    ```xml
+    <constructor-arg name="myDao" ref="userDao"/>
+    ```
+
+
+
+> ### 最佳实践
+
+1. 统一叫法:
+
+   - IOC容器/Bean工厂 : ApplicationContext就是我们的解析xml配置文件以后的对象
+   - Bean:Spring框架的Bean
+
+2. Spring配置文件一般统一叫做spring-context.xml
+
+3. Spring3.0以后一般采用注解扫描的方式来注册我们的Bean对象
+
+   ```xml
+   <!-- 1.注解扫描 -->
+   <context:component-scan base-package="com.ssf.*"/>
+   ```
+
+4. 对应的四个WEB分层用四个不同的IOC注解:
+
+   - @Component   对应Model层
+   - @Repository     对应Dao层
+   - @Service            对应Service层
+   - @Controller       对应控制层
+
+5. 依赖注入注解一般就使用@AutoWired
+
+   - @AutoWired当使用接口时，不能再容器里面同时注册两个以上接口实现
+   - 没有特殊说明就是setter注入
+
+6. ​
+
+> ### Spring集成MyBatis
+
+1. 导入需要的jar包
+
+   ```xml
+           <!-- Mybatis的功能包 -->
+   		<dependency>
+   			<groupId>org.mybatis</groupId>
+   			<artifactId>mybatis</artifactId>
+   			<version>3.1.1</version>
+   		</dependency>
+   		<!-- Mybatis与Spring的整合包 -->
+   		<dependency>
+   			<groupId>org.mybatis</groupId>
+   			<artifactId>mybatis-spring</artifactId>
+   			<version>1.2.3</version>
+   		</dependency>
+   		<!-- mybatis end -->
+   ```
+
+2. 需要Spring的配置文件里面整合它
+
+   ```xml
+   	<!-- 配置数据源 -->
+   	<bean id="dataSource" 
+   	class="org.springframework.jdbc.datasource.DriverManagerDataSource"> 
+   	    <property name="driverClassName" value="${jdbc.driverClassName}" />
+   		<property name="url" value="${jdbc.url}" />
+   		<property name="username" value="${jdbc.username}" />
+   		<property name="password" value="${jdbc.password}" />
+   	</bean>
+   ```
+
+3. 将数据源交给Mybatis
+
+   ```xml
+   	<!-- 数据源交给MyBatis -->
+       <bean id="sqlSessionFactory" class="org.mybatis.spring.SqlSessionFactoryBean">
+           <property name="dataSource" ref="dataSource"/>
+           <property name="typeAliasesPackage" value="com.ssf.model"/><!-- 别名 -->
+           <property name="mapperLocations" value="classpath:/mappings/**/*.xml"/><!-- **代表任意嵌套目录 -->
+       </bean>
+   ```
+
+4.  编写接口IUserDao和实现类UserDaoImpl
+
+   ```java
+   @Repository  //Dao层
+   public class UserDaoImpl implements IUserDao{
+   	
+   	@Autowired
+   	SqlSessionFactory sqlSessionFactory;
+     
+     	@Override
+   	public List<User> findAll() {
+   		SqlSession session =  sqlSessionFactory.openSession();
+   		System.out.println("session="+session);
+   		String method = "findAll";//就是你的UserMapper里面定义的方法id
+   		return session.selectList(method);
+   	}
+   }
+   ```
+
+5. 编写UserMapper.xml映射文件(写SQL的地方)
+
+   ```xml
+   <mapper namespace="com.ssf.dao.IUserDao">
+       <sql id="columns">
+          a.id,
+          a.username,
+          a.password,
+          a.create_time AS 'createTime'
+       </sql>
+       <select id="findAll" resultType="User"><!-- 如果你定义了别名你就可以简化你的写法 -->
+            SELECT 
+            	<include refid="columns"/> 
+            FROM sys_user a
+       </select>
+   ```
+
+   ​
