--- a/我的文档/开发工具的介绍，使用，安装.md
+++ b/我的文档/开发工具的介绍，使用，安装.md
@@ -108,9 +108,13 @@
 
   - Maven的常用命令:     (需要先进入到Pom文件所在的路径下) 
 
-    - mvn install 包含了mvn build和mvn test的功能
+    - **mvn install** 包含了mvn build和mvn test的功能
     - mvn build
     - mvn test
+
+  - 下载我的实例工程 新的
+
+    - git clone -b myssmshop git@github.com:arafat5549/SSFDemo.git myssmshop
 
 
 
