最简化的SSM框架

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -751,3 +751,40 @@ XML配置的方式：
    ```
 
    ​
+
+> ### 整合SpringMVC
+
+1. 让web.xml加载Spring的配置文件spring-context.xml
+
+   ```xml
+      <!-- 让WEB服务器加载Spring配置   读取Spring的配置文件 -->
+      <context-param>
+           <param-name>contextConfigLocation</param-name>
+           <param-value>classpath:spring-context.xml</param-value>
+       </context-param>
+       <listener>
+           <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+       </listener>
+       
+        <!-- SpringMVC配置 -->
+       <servlet>
+           <servlet-name>Spring</servlet-name>
+           <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+           <init-param>
+               <param-name>contextConfigLocation</param-name>
+               <param-value>classpath:spring-mvc.xml</param-value>
+           </init-param>
+           <load-on-startup>1</load-on-startup><!-- 最先启动 -->
+       </servlet>
+       <servlet-mapping>
+           <servlet-name>Spring</servlet-name>
+           <url-pattern>/</url-pattern>
+       </servlet-mapping>
+   ```
+
+   ​
+
+2. 编写Spring-mvc.xml
+
+
+1. ​
