验证框架-注解

--- a/我的文档/商城系统构建.md
+++ b/我的文档/商城系统构建.md
@@ -38,8 +38,8 @@
      - 如何存储你的购物车(需要不需要入库)
 
 
-   - 加入购物车(商品)
-   - 基本流程
+- 加入购物车(商品)
+- 基本流程
      - 1.用户登录，从数据库里面获取购物车对象findCartByUserId
        - 没有购物车
        - 有购物车
@@ -48,4 +48,10 @@
        - 有购物车项
 
 5. 订单模块Order
-   - ​
+
+6. 后台管理模块
+
+   - 后台登录页面
+
+
+   - 用户管理
