--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -2,7 +2,17 @@
 
 **[JAVA基础知识点](http://www.jianshu.com/p/1990eb1f66eb)**
 
+> ### 注解Annotation
 
+- 什么是注解?
+
+  ```
+  注解可以看作是“增强版的注释”，它可以向编译器、虚拟机说明一些事情。
+  注解是描述Java代码的代码，它能够被编译器解析，注解处理工具在运行时也能够解析注解。注解本身是“被动”的信息，只有主动解析它才有意义。
+  除了向编译器/虚拟机传递信息，我们也可以使用注解来生成一些“模板化”的代码。
+  ```
+
+- [注解说明](http://www.jianshu.com/p/8673bc2d5dec)
 
 > ### Java高级特性
 
@@ -49,9 +59,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-                    	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-                    	private static final String COLUMN = 
-                    			  " a.id,"
+                       	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                       	private static final String COLUMN = 
+                       			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -714,7 +724,7 @@ XML配置的方式：
        </bean>
    ```
 
-4.  编写接口IUserDao和实现类UserDaoImpl
+4. 编写接口IUserDao和实现类UserDaoImpl
 
    ```java
    @Repository  //Dao层
@@ -733,7 +743,21 @@ XML配置的方式：
    }
    ```
 
-5. 编写UserMapper.xml映射文件(写SQL的地方)
+5. 或则直接使用Mybatis的接口扫描 我就不用写实现类
+
+   ```xml
+       <!-- 扫描basePackage下所有以@MyBatisDao注解的接口 -->
+      <!-- 接口扫描需要注意你的Mapper文件的namespace <mapper namespace="com.ssf.dao.IUserDao">
+      一定要与你的接口类名一致 --> 
+       <bean id="mapperScannerConfigurer" class="org.mybatis.spring.mapper.MapperScannerConfigurer">
+           <property name="sqlSessionFactoryBeanName" value="sqlSessionFactory" />
+           <property name="basePackage" value="com.ssf.dao"/>
+       </bean>
+   ```
+
+   ​
+
+6. 编写UserMapper.xml映射文件(写SQL的地方)
 
    ```xml
    <mapper namespace="com.ssf.dao.IUserDao">
@@ -786,5 +810,68 @@ XML配置的方式：
 
 2. 编写Spring-mvc.xml
 
+3. SpringMVC的优势
 
-1. ​
+   - 路由/user/login可以指定到方法那一级别(Servlet只能指定到类一级)
+   - 可以自动帮我们封装传过来的参数转坏为对象(有个要求 参数名必须和对象属性名一致)
+   - 简化了跳转的过程 同时封装了我们的视图(不使用JSP模板或者使用多个模板的时候)
+   - Servlet在web.xml中的配置不需要我们进行维护
+   - 很容易进行整合了一些额外功能，比如Hibernate的参数验证可以方便我们进行开发
+
+
+> ### Hibernate-valiadtion做参数的验证
+
+- 导入jar包
+
+  ```xml
+  <!-- 组件-参数验证框架 5.1.1.Final-->
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>5.1.1.Final</version>
+  	</dependency>
+  ```
+
+- 在spring-mvc.xml（验证参数是web层处理的事情）配置参数验证
+
+  ```xml
+      <!-- 配置HibernateValidation验证框架-basename#框架的properties文件的名字 -->
+  	<bean id="messageSource" class="org.springframework.context.support.ResourceBundleMessageSource">
+  	    <property name="basename" value="ValidationMessages"/>
+  	</bean>
+  	<bean id="validator" class="org.springframework.validation.beanvalidation.LocalValidatorFactoryBean">
+           <property name="providerClass" value="org.hibernate.validator.HibernateValidator" />
+           <!-- 这里配置将使用上面国际化配置的messageSource -->
+           <property name="validationMessageSource" ref="messageSource" />
+       </bean> 
+  	<mvc:annotation-driven validator="validator" />
+  ```
+
+- 在Model类里面添加验证的规则
+
+  ```java
+  	//JDk的验证注解
+  	@Pattern(regexp="^[a-zA-Z0-9_]{3,8}")//用户名为3-8位的数字字母下划线
+  	private String username;
+  	//Hibernate的验证注解
+  	@Length(min=6,max=8)
+  	private String password;
+  ```
+
+- 在web层进行参数的验证
+
+  ```java
+  @RequestMapping(value="/login",method=RequestMethod.POST)
+  	public String adminLogin(@Valid User user,BindingResult result,Model model){//直接接收参数
+  		List<ObjectError> errors = result.getAllErrors();
+  		StringBuffer sb = new StringBuffer();
+  		for (ObjectError objectError : errors) {
+  			sb.append(objectError.getDefaultMessage()+"\r\n");
+  		}
+  		System.out.println(sb.toString());
+  		model.addAttribute("msg", sb.toString());
+  		return VIEW_PATH+"login";
+  	}
+  ```
+
+- 进行自定义验证
