事务 连接池 缓存

--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -592,11 +592,17 @@ IOC/DI:
 - IOC控制反转： IOC容器或Bean工厂，你所有写的类除了Model，基本都不用new出来(你不需要维护他的生命周期)，但是需要在你的IOC容器里面注册它。
 - DI依赖注入：
 
-AOP:
+AOP: AspectOrientProgramming(面向切面编程)
+
+- 我们的java程序时是线性执行的，提供了另外一种横向切入功能。
+- JointPoint连接点:
+- PointCut切入点：
+- Advice通知（增强方法）：
+- Aspect切面:
 
 事务管理:
 
-
+- Spring进行事务的整合，事务是靠AOP功能来实现的。
 
 
 
@@ -680,6 +686,19 @@ XML配置的方式：
 
 6. ​
 
+
+
+> 技术选型-
+
+1. Spring框架            -4.1.3（最小化配置方式 基于注解）
+2. SpringMVC框架    -4.1.3
+3. MybatisORM框架 -3.3.1
+4. 参数验证框架Hibernate-Valiadation -5.5.1
+5. 日记框架Log4j使用slf4j日记接口类整合(这样以后切换到其他的日记框架也能统一使用)  -1.2
+6. ​
+
+
+
 > ### Spring集成MyBatis
 
 1. 导入需要的jar包
@@ -743,7 +762,7 @@ XML配置的方式：
    }
    ```
 
-5. 或则直接使用Mybatis的接口扫描 我就不用写实现类
+5. 或者直接使用Mybatis的接口扫描 我就不用写实现类
 
    ```xml
        <!-- 扫描basePackage下所有以@MyBatisDao注解的接口 -->
@@ -806,11 +825,82 @@ XML配置的方式：
        </servlet-mapping>
    ```
 
-   ​
-
 2. 编写Spring-mvc.xml
 
-3. SpringMVC的优势
+   ```xml
+    <!-- 启动扫描所有的controller -->
+       <context:component-scan base-package="com.ssf.web"/>
+       <context:component-scan base-package="com.ssf.web.back"/>
+     
+       <mvc:annotation-driven/>
+       
+       <!--jsp页面解析器，当Controller返回XXX字符串时，
+       先通过拦截器，然后该类就会在/WEB-INF/views/目录下，查找XXX.jsp文件 -->
+       <bean class="org.springframework.web.servlet.view.InternalResourceViewResolver">
+           <property name="order" value="1"/>
+           <property name="viewClass" value="org.springframework.web.servlet.view.JstlView"/>
+           <property name="prefix" value="/WEB-INF/views/"></property>
+           <property name="suffix" value=".jsp"></property>
+       </bean>
+       <!-- 多段文件上传 需要commons-fileupload.jar和commons-io.jar 
+       <bean id="multipartResolver"
+             class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+           <property name="maxUploadSize" value="1073741824"/>
+       </bean>
+       -->
+       <!-- 对静态资源文件的访问， 将无法mapping到Controller的path交给default servlet handler处理 -->
+       <mvc:default-servlet-handler/>
+   ```
+
+3. 统一错误处理
+
+   - 404和500等资源有关的错误，返回编码错误。在web.xml里面配置
+
+     ```xml
+         <!-- 错误页面配置(不是代码逻辑的错误) -->
+         <error-page>
+           <error-code>404</error-code><!-- 无法找到资源 -->
+           <location>/WEB-INF/views/error/404.jsp</location>
+         </error-page>
+         
+         <error-page>
+           <error-code>500</error-code><!-- (服务器内部错误)服务器遇到错误，无法完成请求。 -->
+           <location>/WEB-INF/views/error/500.jsp</location>
+         </error-page>
+     ```
+
+   - 业务逻辑的错误进行统一处理,运行时异常(我们需要处理的异常)
+
+     - 第一种继承了HandlerExceptionResolver接口
+
+       ```java
+       /**
+        * 4.错误信息统一处理
+        * 对未处理的错误信息做一个统一处理
+        *
+        */
+       @Component
+       public class GlobalExceptionResolver implements HandlerExceptionResolver {
+       }
+       ```
+
+     - SpringMVC提供了一种错误的默认配置给你SimpleMappingExceptionResolver
+
+       ```xml
+       <!-- 在SpringMVC配置-->	
+       <bean class="org.springframework.web.servlet.handler.SimpleMappingExceptionResolver">
+       		<property name="exceptionMappings">
+       			<props>
+       				<prop key="org.apache.shiro.authz.UnauthorizedException">error/403</prop>
+       				<prop key="java.lang.Throwable">error/500</prop>
+       			</props>
+       			</property>
+       	</bean>
+       ```
+
+       ​
+
+4. SpringMVC的优势
 
    - 路由/user/login可以指定到方法那一级别(Servlet只能指定到类一级)
    - 可以自动帮我们封装传过来的参数转坏为对象(有个要求 参数名必须和对象属性名一致)
@@ -875,3 +965,164 @@ XML配置的方式：
   ```
 
 - 进行自定义验证
+
+
+
+> ### 数据库缓存
+
+市面上流行的缓存:EHCache,Redis.
+
+- EHCache:依附于我们的应用程序，不独立运行，应用程序关了缓存就没了，是Hibernate的官方推荐。
+- Redis:键值对数据库,做缓存数据库比如我们商品的评论或者点赞等功能，相关数据并不是那么关键，不适合实时入库，就会在内存里面保留一份数据，做排序或者查找等功能。会在某一个时间段统一入库。独立于应用该程序，暂时都只能在Linux上面跑。
+
+为什么我们要使用数据库缓存?
+
+- ​
+
+**使用EHCache进行数据缓存**
+
+1. 导入相关的jar包
+
+   ```xml
+   <!-- ehcache缓存 -->
+   	<dependency>
+   		<groupId>net.sf.ehcache</groupId>
+   		<artifactId>ehcache-core</artifactId>
+   		<version>2.6.11</version>
+   	</dependency>
+   ```
+
+2. 在spring-context.xml里面进行整合
+
+   ```xml
+   <!-- 缓存配置 -->
+   	<bean id="cacheManager" class="org.springframework.cache.ehcache.EhCacheCacheManager"
+             p:cacheManager-ref="ehcacheManager"/>
+             
+   	<bean id="ehcacheManager" class="org.springframework.cache.ehcache.EhCacheManagerFactoryBean"
+           p:configLocation="classpath:ehcache-local.xml"/>
+       <cache:annotation-driven/>   <!--开启缓存注解--> 
+   ```
+
+3. 配置ehcache-local.xml进行EhCache的配置
+
+   ```xml
+   	<!-- name：缓存名称。
+       maxElementsInMemory：缓存最大个数。
+       eternal：对象是否永久有效，一但设置了，timeout将不起作用。
+       timeToIdleSeconds：对象在失效前的允许闲置时间（秒）。当eternal=false时使用，可选属性，默认值是0，也就是可闲置时间无穷大。
+       timeToLiveSeconds：对象在失效前允许存活时间（秒）.最大时间介于创建时间和失效时间之间.当eternal=false时使用,默认是0,也就是对象存活时间无穷大。
+       overflowToDisk：当内存中对象数量达到maxElementsInMemory时，Ehcache将对象写到磁盘中。
+       diskSpoolBufferSizeMB：这个参数设置DiskStore（磁盘缓存）的缓存区大小。默认是30MB。每个Cache都应该有自己的一个缓冲区。
+       maxElementsOnDisk：硬盘最大缓存个数。
+       diskPersistent：是否缓存虚拟机重启期数据，默认值为false。
+       diskExpiryThreadIntervalSeconds：磁盘失效线程运行时间间隔，默认是120秒。
+       memoryStoreEvictionPolicy：当达到maxElementsInMemory限制时，Ehcache将会根据指定的策略去清理内存。默认策略是LRU（最近最少使用）。你可以设置为FIFO（先进先出）或是LFU（较少使用）。
+       clearOnFlush：内存数量最大时是否清除。
+       <diskStore>表示当内存缓存中对象数量超过类设置内存缓存数量时，将 缓存对象写到硬盘，path=”java.io.tmpdir”表示把数据写到这个目录下。Java.io.tmpdir目录在运行时会根据相对路径生成。
+       <defaultCache>表示设定缓存的默认数据过期策略。
+       <cache>表示设定用具体的命名缓存的数据过期策略-->
+       
+       <cache
+               name="indexCache"
+               maxElementsInMemory="150"
+               eternal="true"
+               timeToLiveSeconds="0"
+               timeToIdleSeconds="0"
+               overflowToDisk="false"
+       />
+   ```
+
+4. 怎么使用Ehcache
+
+   ```java
+   //使用缓存注解，key不能重复 (类名+分割符+方法名+分隔符+参数)
+   @Cacheable(value="indexCache",key="'IUserDao:findById:'+#id")
+   T findById(Integer id);
+   ```
+
+> ### 数据库连接池
+
+市面上流行的数据库连接池
+
+- DBCP
+- C3P0
+- Druid:它提供数据统计功能，你的数据库瓶颈在哪，哪些时间段压力最大
+
+**使用Druid数据库连接池**
+
+- 导入jar
+
+  ```xml
+  <!-- 数据库连接池 -->
+  	<dependency>
+  	        <groupId>com.alibaba</groupId>
+  	        <artifactId>druid</artifactId>
+  	        <version>1.0.20</version>
+  	</dependency>
+  ```
+
+- 在spring-context.xml里面整合
+
+  ```xml
+  	<!-- 数据源配置, 使用 .Druid数据库连接池 -->
+  	<bean id="dataSource"
+  	class="com.alibaba.druid.pool.DruidDataSource" init-method="init" destroy-method="close"> 
+  	    <property name="driverClassName" value="${jdbc.driverClassName}" />
+  		<property name="url" value="${jdbc.url}" />
+  		<property name="username" value="${jdbc.username}" />
+  		<property name="password" value="${jdbc.password}" />
+  		
+  		<!-- 配置初始化大小、最小、最大 -->
+  		<property name="initialSize" value="${jdbc.pool.init}" />
+  		<property name="minIdle" value="${jdbc.pool.minIdle}" /> 
+  		<property name="maxActive" value="${jdbc.pool.maxActive}" />
+  		
+  		<!-- 配置获取连接等待超时的时间 -->
+  		<property name="maxWait" value="60000" />
+  		<!-- 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒 -->
+  		<property name="timeBetweenEvictionRunsMillis" value="60000" />
+  		<!-- 配置一个连接在池中最小生存的时间，单位是毫秒 -->
+  		<property name="minEvictableIdleTimeMillis" value="300000" />
+  		
+  		<property name="validationQuery" value="${jdbc.testSql}" />
+  		<property name="testWhileIdle" value="true" />
+  		<property name="testOnBorrow" value="false" />
+  		<property name="testOnReturn" value="false" />
+  		<!-- 打开PSCache，并且指定每个连接上PSCache的大小（Oracle使用）
+  		<property name="poolPreparedStatements" value="true" />
+  		<property name="maxPoolPreparedStatementPerConnectionSize" value="20" /> -->
+  		
+  		<!-- 配置监控统计拦截的filters -->
+  	    <property name="filters" value="stat" /> 
+  	</bean>
+  ```
+
+- 配置数据同居和监控的功能，在web.xml里面配置
+
+  ```xml
+   <!-- druid -->
+  	<servlet>
+  		<servlet-name>DruidStatView</servlet-name>
+  		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+  	</servlet>
+  	<servlet-mapping>
+  		<servlet-name>DruidStatView</servlet-name>
+  		<url-pattern>/druid/*</url-pattern>
+  	</servlet-mapping>
+
+  	<filter>
+  		<filter-name>DruidWebStatFilter</filter-name>
+  		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+  		<init-param>
+  			<param-name>exclusions</param-name>
+  			<param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
+  		</init-param>
+  	</filter>
+  	<filter-mapping>
+  		<filter-name>DruidWebStatFilter</filter-name>
+  		<url-pattern>/*</url-pattern>
+  	</filter-mapping>
+  ```
+
+  ​
