--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -688,14 +688,19 @@ XML配置的方式：
 
 
 
-> 技术选型-
+> 技术选型-第三方服务框架
 
 1. Spring框架            -4.1.3（最小化配置方式 基于注解）
 2. SpringMVC框架    -4.1.3
 3. MybatisORM框架 -3.3.1
 4. 参数验证框架Hibernate-Valiadation -5.5.1
 5. 日记框架Log4j使用slf4j日记接口类整合(这样以后切换到其他的日记框架也能统一使用)  -1.2
-6. ​
+6. 数据库缓存 EhCache
+7. 数据库连接池 Druid
+8. 事务管理 - Spring的事务管理
+9. Quartz任务调用
+
+> 技术选型-工具类
 
 
 
