--- a/我的文档/基础问题.md
+++ b/我的文档/基础问题.md
@@ -32,6 +32,15 @@
   - ${user.username}EL表达式
   - Class.forName("");   JDBC连接里面
 
+> ### Java的序列化(Serializable)
+
+什么是序列化?
+
+- 序列化 (Serialization)将对象的状态信息转换为可以存储或传输的形式的过程
+- JSON数据
+- XML数据
+- ProtoBuf数据
+
 > ### 开发基本流程
 
 1. 需求分析(抽取出需要的JavaBean实体对象)
@@ -59,9 +68,9 @@
    -    不要使用通配符*,用指定列来
 
    -    ```java
-                       	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
-                       	private static final String COLUMN = 
-                       			  " a.id,"
+                          	//指定列查询 和 别名AS(为了数据库的命名规范和Java命名规范的统一)
+                          	private static final String COLUMN = 
+                          			  " a.id,"
         + " a.name,"
         			+ " a.parent_id AS 'parentId', "
         			+ " a.parent_ids AS 'parentIds'";
@@ -876,17 +885,18 @@ XML配置的方式：
 
    - 业务逻辑的错误进行统一处理,运行时异常(我们需要处理的异常)
 
-     - 第一种继承了HandlerExceptionResolver接口
+     -  第一种继承了HandlerExceptionResolver接口
 
-       ```java
-       /**
+        ```java
+        /**
         * 4.错误信息统一处理
         * 对未处理的错误信息做一个统一处理
         *
         */
-       @Component
-       public class GlobalExceptionResolver implements HandlerExceptionResolver {
-       }
+        @Component
+        public class GlobalExceptionResolver implements HandlerExceptionResolver {
+        }
+        ```
        ```
 
      - SpringMVC提供了一种错误的默认配置给你SimpleMappingExceptionResolver
@@ -1131,3 +1141,99 @@ XML配置的方式：
   ```
 
   ​
+
+  > ### SpringMVC整合JSON和XML的解析处理
+
+  - JSON的优点：
+
+    - 小，传输的流量就小，适合进行协议传输
+    - 结构简单
+
+    ```json
+    典型的JSON格式
+    {"id":1,"pId":0,"name":"个人用品/服饰"},{"id":2,"pId":0,"name":"家用电器"}
+
+    [{"id":1,"pId":0,"name":"个人用品/服饰"},{"id":2,"pId":0,"name":"家用电器",child:{子对象...}}]
+    ```
+
+  - XML的优点：
+
+    - 结构严谨，适合做配置文件
+    - 数据量比较大，越来越少被作为传输协议
+
+
+  - 导入jar包
+
+    ```xml
+    	<!-- JSON解析#jackson-->
+    	<dependency>
+    			<groupId>com.fasterxml.jackson.core</groupId>
+    			<artifactId>jackson-core</artifactId>
+    			<version>2.7.4</version>
+    	</dependency>
+    	<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.7.4</version>
+    	</dependency>
+    	<dependency>
+    			<groupId>com.fasterxml.jackson.core</groupId>
+    			<artifactId>jackson-annotations</artifactId>
+    			<version>2.7.4</version>
+    		</dependency>
+    ```
+
+  - 在spring-mvc里面进行文件配置
+
+  ```xml
+   <mvc:annotation-driven/><!-- 默认开启所有配置 -->
+  ```
+
+  - 后台 代码：往前台推送数据
+
+    ```java
+    	/**
+    	 * 往前台传JSON对象（直接把你需要的数据给你）
+    	 * @return
+    	 */
+    	@RequestMapping(value="/getJson", produces={"application/json;charset=UTF-8"})  //默认类型是JSON
+    	@ResponseBody 
+    	public List<Category> treeData(){
+    		List<Category> list = categoryDao.findAll();
+    		return list;
+    	}
+    ```
+
+  - 前台部分：Ajax请求
+
+    ```javascript
+    $.ajax(
+    		{ 
+    					url: "/MySSMShop/getJson", 
+    				 	success: function(data){
+            				$.fn.zTree.init($("#treeDemo"), setting,  data);
+         				}
+         			}
+          		);
+    ```
+
+  - JSON注解-自定义你传输json的key值   注解加在实体对象的属性上面
+
+    ```java
+    @JsonInclude(JsonInclude.Include.NON_NULL)//所有不为空的对象都会被转化
+    public class Category implements Serializable {
+        private Integer id;
+
+        private String name;
+        
+        @JsonProperty("pId")  //jackson的注解
+        private Integer parentId;
+        @JsonIgnore
+        private String parentIds;
+        @JsonIgnore
+        private Date createTime;
+        @JsonIgnore
+        private Date updateTime;
+    ```
+
+    ​
